Made it modular.
Now validator and watcher are configured like mixins.

--- a/examples/config/config1.json
+++ b/examples/config/config1.json
@@ -15,7 +15,7 @@
     },
     "__database.commented.out": {
         "1": {
-            "user": "s",
+            "user": "s s",
             "password": "123456",
             "host": "localhost",
             "port": 5432,
