--- a/examples/config/config1.json
+++ b/examples/config/config1.json
@@ -15,7 +15,7 @@
     },
     "__database.commented.out": {
         "1": {
-            "user": "s s",
+            "user": "phppgadmin",
             "password": "123456",
             "host": "localhost",
             "port": 5432,
@@ -42,7 +42,7 @@
         "qa": "questionGroup.mkgu.questions"
     },
     "amqp": {
-        "enabled": false,
+        "enabled": true,
         "namespace": "iris",
         "host": "localhost",
         "iris_raw_events": "amq.topic"
