--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "catcher.js",
   "dependencies": {
     "bluebird": "^2.9.24",
-    "is-my-json-valid": "^2.10.0"
+    "is-my-json-valid": "^2.10.0",
+    "lodash": "^3.6.0",
+    "traverse": "^0.6.6",
+    "validator": "^3.37.0"
   },
   "devDependencies": {},
   "scripts": {
